# geocodePANDAS

./: .gitignore  README.md  pyproject.toml
files/: setNewAddress_CL.csv
geocodepandas/: __init__.py  data_transformations.py  geocode_dataframe.py  geocode_stores.py  main.py  new_coluns_using_displayname.py  read_csv.py  reverse_geocoder.py  reverse_geocoder_geojson.py
tests/: test_reverse_geocoder.py
